upgraded to spring boot, refactor logger